<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000"
    android:orientation="vertical" >
    	<RelativeLayout 
    	android:id="@+id/CanvasLayout"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical" >
    	</RelativeLayout> <!--  ends CanvasLayout -->
    	<!--  clocks linearlayout -->
    	<RelativeLayout 
    	android:id="@+id/clocksLayout"
    	android:layout_width="fill_parent"
    	android:layout_height="100dp"
    	android:orientation="vertical" 
    	android:layout_alignParentBottom="true"
    	>
    	<!--  working clock -->
    	<LinearLayout 
    	android:layout_width="fill_parent"
    	android:layout_height="50dp"
    	android:layout_gravity="bottom"
    	android:orientation="horizontal" 
    	>
    	<TextView
	        android:id="@+id/workTimeText"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_weight="7"
        	android:text="@string/timeText" />
    	<Button
        android:id="@+id/workPlayBtn"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/workPlayBtn" />
    	</LinearLayout> <!--  working clock ends-->
    	
    	<!--  coffee clock --> <!--  coffee clock ends -->

    	<LinearLayout
    	    android:layout_width="fill_parent"
    	    android:layout_height="50dp"
    	    android:layout_alignParentBottom="true"
    	    android:layout_alignParentLeft="true"
    	    android:orientation="horizontal" >

    	    <TextView
    	        android:id="@+id/coffeeTimeText"
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:layout_weight="7"
    	        android:text="@string/timeText" />

    	    <Button
    	        android:id="@+id/coffeePlayBtn"
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:layout_weight="1"
    	        android:text="@string/coffeePlayBtn" />
    	</LinearLayout>
    
	</RelativeLayout> <!--  clocks linearlayout ends : -->

    	<AnalogClock
        android:id="@+id/analogClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:dial="@drawable/analog_clock"
        android:hand_minute="@drawable/minutes_hand"
        android:hand_hour="@drawable/hours_hand" 
        />
       	<ImageView 
        android:contentDescription="@string/secondsHand"
        android:id="@+id/imgsecond"
        android:src="@drawable/seconds_hand"
    	android:layout_width="wrap_content" 
     	android:layout_height="wrap_content"
   		android:layout_centerInParent="true" />
 </RelativeLayout>   	
